bugfix: stretch too agressive

--- a/src/scss/layout/_stretch.scss
+++ b/src/scss/layout/_stretch.scss
@@ -25,7 +25,7 @@
 	object-fit: cover;
 }
 
-.stretch-column > * > p{
+.stretch-column > * > .image-paragraph {
 	height: 100%;
 	width: 100%;
 }
